--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,12 @@
             <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
             <version>${camunda.springboot.version}</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.camunda.bpm.springboot</groupId>
+            <artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
+            <version>${camunda.springboot.version}</version>
+        </dependency>
+
 
 
         <dependency>
